# learning

./: novel1.txt  novel2.txt  novel3.txt
chapt4_ws/install/: local_setup.sh  setup.sh
chapt4_ws/log/: latest_build
chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt
chapt4_ws/src/demo_python_service/: setup.py
chapt4_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
chapt4_ws/src/demo_python_service/launch/: demo.launch.py
chapt4_ws/src/install/: local_setup.sh  setup.sh
chapt4_ws/src/log/: latest_build
install/: local_setup.sh  setup.sh
install/demo_python_pkg/share/demo_python_pkg/: package.dsv  package.sh  package.xml
log/: latest_build
src/demo_python_pkg/: setup.py
src/demo_python_topic/: setup.py
src/demo_python_topic/demo_python_topic/: novel_pub_node.py
src/lr_interfaces/: CMakeLists.txt
src/lr_interfaces/srv/: Height.srv
src/morihuooshan/: package.xml  setup.cfg  setup.py
src/morihuooshan/morihuooshan/: car_client.py  car_service.py
src/niluo_node/: setup.cfg  setup.py
src/niluo_node/niluo_node/: niluo_node.py
src/status_display/: CMakeLists.txt
src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
src/status_interfaces/: package.xml
src/status_publisher/: package.xml  setup.py
src/status_publisher/status_publisher/: sys_status_pub.py
src/student_node/: package.xml  setup.cfg  setup.py
topic_ws/install/: setup.sh
topic_ws/log/: latest_build
topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
(+71 files in other folders)
